5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1642_2450.log
== TEST (2019-04-11 15:50:51) 
-- CODE:
nome1 = input('nome 1: ')
nome2 = input('nome 2: ')

if (nome1 >= nome2):
	print(nome1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:51:12) 
-- CODE:
nome1 = input('nome 1: ')
nome2 = input('nome 2: ')

if (nome1 > nome2):
	print(nome1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:51:57) 
-- CODE:
nome1 = upper.()input('nome 1: ')
nome2 = upper.()input('nome 2: ')

if (nome1 > nome2):
	print(nome)
	
-- ERROR:
File "XXXX", line 1
    nome1 = upper.()input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:52:18) 
-- CODE:
nome1 = input('nome 1: ').upper()
nome2 = input('nome 2: ').upper()

if (nome1 > nome2):
	print(nome)
	
-- ERROR:
File "XXXX", line 1
    nome1 = upper.()input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:52:31) 
-- CODE:
nome1 = input('nome 1: ').upper()
nome2 = input('nome 2: ').upper()

if (nome1 > nome2):
	print(nome1)
	
-- ERROR:
File "XXXX", line 1
    nome1 = upper.()input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:52:41) 
-- CODE:
nome1 = input('nome 1: ').upper()
nome2 = input('nome 2: ').upper()

if (nome1 > nome2):
	print(nome2)
	
-- ERROR:
File "XXXX", line 1
    nome1 = upper.()input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:52:49) 
-- CODE:
nome1 = input('nome 1: ').upper()
nome2 = input('nome 2: ').upper()

if (nome1 > nome2):
	print(nome2)
	
-- ERROR:
File "XXXX", line 1
    nome1 = upper.()input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:53:01) 
-- CODE:
nome1 = input('nome 1: ')
nome2 = input('nome 2: ')

if (nome1.upper() > nome2.upper()):
	print(nome2)
	
-- ERROR:
File "XXXX", line 1
    nome1 = upper.()input()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:53:24) 
-- CODE:
nome1 = input('nome 1: ')
nome2 = input('nome 2: ')

if (nome1.upper() > nome2.upper()):
	print(nome2)
	
if (nome2.upper() > nome1.upper()):
	print(nome1)
-- OUTPUT:
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:54:01) 
-- CODE:
nome1 = input('nome 1: ')
nome2 = input('nome 2: ')

if (nome1.upper() > nome2.upper()):
	print(nome2)
	print(nome1)
	
if (nome2.upper() > nome1.upper()):
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:54:09) 
-- CODE:
nome1 = input('nome 1: ')
nome2 = input('nome 2: ')

if (nome1.upper() > nome2.upper()):
	print(nome2)
	print(nome1)
	
if (nome2.upper() > nome1.upper()):
	print(nome1)
	print(nome2)
-- EXECUTION TIME:
0.167208
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
